# context-normalizer

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY-NOTICES.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  client-compatibility.yml  feature.yml
.github/workflows/: ci.yml  codex-integration.yml  release.yml
docs/: API-RELAY.md  ARCHITECTURE.md  CAPABILITIES-AND-LIMITS.md  CLI-REFERENCE.md  CLIENT-INTEGRATION.md  COMPATIBILITY.md  CONFIGURATION.md  INSTALLATION.md  OPERATIONAL-BOUNDARIES.md  RELEASING.md  SUPPLY-CHAIN.md  TERMINOLOGY-EXPANSION-PROFILES.md  TROUBLESHOOTING.md
integrations/codex/: LICENSE  README.md  THIRD_PARTY-NOTICES.md  ctxnorm-codex  ctxnorm-codex.ps1  install.ps1  install.sh  integration.json  uninstall.ps1  uninstall.sh  verify.ps1  verify.sh
integrations/codex/patches/: codex-tui-context-normalizer.patch
integrations/pi/: README.md  THIRD_PARTY-NOTICES.md  install.ps1  install.sh  package.json  uninstall.ps1  uninstall.sh  verify.ps1  verify.sh
patches/: codex-tui-context-normalizer.patch
requirements/: dependency-policy.json
scripts/: acceptance-windows.ps1  audit_public_tree.py  check_docs.py  check_public_language.py  check_supply_chain_policy.py  package_components.py  verify_release.py
scripts/lifecycle/: ContextNormalizerRuntime.ps1  context-normalizer-runtime.sh  install.cmd  install.ps1  install.sh  uninstall.cmd  uninstall.ps1  uninstall.sh
src/context_normalizer/: __init__.py  cli.py  clipboard.py  config.py  feature_cli.py  lifecycle.py  normalize.py  profiles.py  relay.py  terminology.py  workspace.py
tests/: test_config_cli.py  test_feature_cli.py  test_normalizer.py  test_profiles.py  test_relay.py  test_workspace.py
(+14 files in other folders)
